--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "devDependencies": {
     "sass": "^1.69.5",
+    "scss": "^0.2.4",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.11.2"
   }
 }
